--- a/Airline-dashboard.ipynb
+++ b/Airline-dashboard.ipynb
@@ -50,7 +50,27 @@
     "# Finally,add group componentboard\n",
     "\n",
     "app.layout= html.Div(children = [html.H1('Airline Performance Dash'),style = {'textAlign':'center','color':'#503036','font-size':40}),\n",
-    "                                 html.Div()"
+    "                                 html.Div([\"Input Year :\",dcc.Input(id = 'input-year',value = '2010',\n",
+    "                                                                   type = 'number',style = {'height':'50px','font-size';35})],\n",
+    "                                          style = {'font-size'= 40}),\n",
+    "                                 html.Br(),\n",
+    "                                 html.Br(),\n",
+    "                                 html.Div(dcc.Graph(id = 'line-plot')),\n",
+    "                                ])\n",
+    "# add callback decorator\n",
+    "\n",
+    "@app.callback(output(component_id = 'line-plot',component_property = 'figure'),\n",
+    "              input(component_id ='input-year',component_property = 'value'))\n",
+    "\n",
+    "# Add computation to callback function and add return graph\n",
+    "def get_graph(entered_year):\n",
+    "    # Select 2019 data\n",
+    "    df = airline_data[airline_data['Year'] == int(entered_year)]\n",
+    "    \n",
+    "    # Group the data by month and compute average over delay time\n",
+    "    line_data = df.groupby('Month')['ArrDelay'].mean().reset_index()\n",
+    "    fig = go.Figure()\n",
+    "    "
    ]
   }
  ],
