finished the line plot

--- a/Airline-dashboard.ipynb
+++ b/Airline-dashboard.ipynb
@@ -69,8 +69,14 @@
     "    \n",
     "    # Group the data by month and compute average over delay time\n",
     "    line_data = df.groupby('Month')['ArrDelay'].mean().reset_index()\n",
-    "    fig = go.Figure()\n",
-    "    "
+    "    fig = go.Figure(data= go.Scatter(x = line_data['Month'],y = line_data['ArrDelay'],mode ='lines',marker = dict(color='green')))\n",
+    "    fig.update_layout(title = 'Month vs Average Flight Delay Time', xaxis_title='Month', yaxis_title='ArrDelay'))\n",
+    "    \n",
+    "    return fig\n",
+    "# Run the app\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server()"
    ]
   }
  ],
