finished the first part

--- a/Airline-dashboard.ipynb
+++ b/Airline-dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +49,24 @@
     "# Add html.div and core input text component\n",
     "# Finally,add group componentboard\n",
     "\n",
-    "app.layout= html.Div(children = [html.H1('Airline Performance Dash'),style = {'textAlign':'center','color':'#503036','font-size':40}),\n",
+    "app.layout= html.Div(children = [html.H1('Airline Performance Dash',\n",
+    "                                         style = {'textAlign':'center','color':'#503D36',\n",
+    "                                                  'font-size':40}),\n",
+    "                                 \n",
+    "                                 \n",
+    "                                 \n",
+    "                                 \n",
     "                                 html.Div([\"Input Year :\",dcc.Input(id = 'input-year',value = '2010',\n",
-    "                                                                   type = 'number',style = {'height':'50px','font-size';35})],\n",
-    "                                          style = {'font-size'= 40}),\n",
+    "                                                                   type = 'number',style = {'height':'50px','font-size':35})],\n",
+    "                                          style = {'font-size': 40}),\n",
     "                                 html.Br(),\n",
     "                                 html.Br(),\n",
     "                                 html.Div(dcc.Graph(id = 'line-plot')),\n",
     "                                ])\n",
     "# add callback decorator\n",
     "\n",
-    "@app.callback(output(component_id = 'line-plot',component_property = 'figure'),\n",
-    "              input(component_id ='input-year',component_property = 'value'))\n",
+    "@app.callback(Output(component_id = 'line-plot',component_property = 'figure'),\n",
+    "              Input(component_id ='input-year',component_property = 'value'))\n",
     "\n",
     "# Add computation to callback function and add return graph\n",
     "def get_graph(entered_year):\n",
@@ -70,7 +76,7 @@
     "    # Group the data by month and compute average over delay time\n",
     "    line_data = df.groupby('Month')['ArrDelay'].mean().reset_index()\n",
     "    fig = go.Figure(data= go.Scatter(x = line_data['Month'],y = line_data['ArrDelay'],mode ='lines',marker = dict(color='green')))\n",
-    "    fig.update_layout(title = 'Month vs Average Flight Delay Time', xaxis_title='Month', yaxis_title='ArrDelay'))\n",
+    "    fig.update_layout(title = 'Month vs Average Flight Delay Time', xaxis_title='Month', yaxis_title='ArrDelay')\n",
     "    \n",
     "    return fig\n",
     "# Run the app\n",
@@ -78,6 +84,20 @@
     "if __name__ == '__main__':\n",
     "    app.run_server()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
