Error corrected and final output can be seen

--- a/Airline-dashboard.ipynb
+++ b/Airline-dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,22 +27,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished\n"
+     ]
+    }
+   ],
    "source": [
     "# Read the airline data into a dataframe\n",
     "Airline_data = pd.read_csv('https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DV0101EN-SkillsNetwork/Data%20Files/airline_data.csv', \n",
     "                            encoding = \"ISO-8859-1\",\n",
     "                            dtype={'Div1Airport': str, 'Div1TailNum': str, \n",
-    "                                   'Div2Airport': str, 'Div2TailNum': str})"
+    "                                   'Div2Airport': str, 'Div2TailNum': str})\n",
+    "print(\"Finished\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:8050/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:09] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:09] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:09] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:13] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:20] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:23] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:24] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:25] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:25] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:25] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:25] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:26] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:27] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:28] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:28] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:30] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:30] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:31] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:31] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:31] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:32] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:32] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:44] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:45] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:47] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:47] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:48] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:48] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:48] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:49] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [05/Jun/2021 08:44:49] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the layout of the application and adjust it\n",
     "# Create an outer division using html.div and add title to the division using html.H1 components\n",
@@ -71,13 +132,12 @@
     "# Add computation to callback function and add return graph\n",
     "def get_graph(entered_year):\n",
     "    # Select 2019 data\n",
-    "    df = airline_data[airline_data['Year'] == int(entered_year)]\n",
+    "    df = Airline_data[Airline_data['Year'] == int(entered_year)]\n",
     "    \n",
     "    # Group the data by month and compute average over delay time\n",
     "    line_data = df.groupby('Month')['ArrDelay'].mean().reset_index()\n",
     "    fig = go.Figure(data= go.Scatter(x = line_data['Month'],y = line_data['ArrDelay'],mode ='lines',marker = dict(color='green')))\n",
     "    fig.update_layout(title = 'Month vs Average Flight Delay Time', xaxis_title='Month', yaxis_title='ArrDelay')\n",
-    "    \n",
     "    return fig\n",
     "# Run the app\n",
     "\n",
@@ -90,7 +150,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = Airline_data[Airline_data['Year'] == 2010]\n",
+    "    \n",
+    "    # Group the data by month and compute average over delay time\n",
+    "    line_data = df.groupby('Month')['ArrDelay'].mean().reset_index()\n",
+    "    fig = go.Figure(data= go.Scatter(x = line_data['Month'],y = line_data['ArrDelay'],mode ='lines',marker = dict(color='green')))\n",
+    "    fig.update_layout(title = 'Month vs Average Flight Delay Time', xaxis_title='Month', yaxis_title='ArrDelay')\n",
+    "    fig.show()"
+   ]
   },
   {
    "cell_type": "code",
